--- a/src/main/webapp/templates/starter.html
+++ b/src/main/webapp/templates/starter.html
@@ -15,7 +15,7 @@
       <!-- filters section -->
       <div class="col-xs-12 mL-card">
 
-        <p class="text-center">Diviértete mezclando filtros</p>
+        <h1 class="text-center">Diviértete mezclando filtros</h1>
 
         <div id="filters" class="w3-theme-l4">
           <div class="row">
@@ -36,7 +36,7 @@
           </div>
         </div>
 
-        <p id="filtersFooter">
+        <p id="filtersFooter" class="mL-text-small">
           <span style="float:left">Acerca de nuestros <a href="" class="w3-link">filtros</a></span>
           <span style="float:right">*Solo para versión <a href="" class="w3-link">PRO</a></span>
         </p>
@@ -47,11 +47,15 @@
 
     <!-- variable section -->
     <div class="col-sm-6" style="padding:5%">
+        <div class="mL-card text-center">
 
-        <div class="mL-card">
-          <p>hola</p>
+
+
+
+          <p class="mL-text-small">¿Quieres ver los resultados más rápido?</p>
+          <p class="mL-text-small">Prueba nuestra versión <a href="" class="w3-link">PRO</a></p>
+
         </div>
-
     </div><!-- END: variable section -->
   </div>
 </div>
