--- a/src/main/webapp/templates/starter.html
+++ b/src/main/webapp/templates/starter.html
@@ -50,10 +50,12 @@
         <div class="mL-card text-center">
 
 
+          <button class="w3-btn w3-tag w3-theme-action"
+                  id="sendFilters" ng-click="sendFilters()">Aplicar filtros</button>
 
-
-          <p class="mL-text-small">¿Quieres ver los resultados más rápido?</p>
-          <p class="mL-text-small">Prueba nuestra versión <a href="" class="w3-link">PRO</a></p>
+          <p class="mL-text-small" style="margin-bottom: 0">¿Quieres ver los resultados más rápido?</p>
+          <p class="mL-text-small" style="margin-bottom: 0">Prueba nuestra versión <a href="" class="w3-link">PRO</a></p>
+          </br>
 
         </div>
     </div><!-- END: variable section -->
