Delete ng-droplet library

--- a/src/main/webapp/templates/starter.html
+++ b/src/main/webapp/templates/starter.html
@@ -7,8 +7,9 @@
     <div class="col-sm-6" style="padding:2%">
       <!-- load section -->
       <div class="col-xs-12">
-        <div class="mL-card">
-          <p>hola</p>
+        <div class="mL-card" style="height: 70px">
+
+
         </div>
       </div><!-- END: load section -->
 
