Correct minor fixes

--- a/src/main/webapp/templates/starter.html
+++ b/src/main/webapp/templates/starter.html
@@ -5,7 +5,7 @@
 
 
     <div ng-if="firstView">
-      <button class="w3-btn w3-tag w3-theme-action" style="font-weight: 700" ng-click="processVideo()">
+      <button class="w3-btn w3-tag w3-theme-action" style="font-weight: 700" ng-click="startProcess()">
         Procesar vídeo</button>
     </div>
 
