--- a/src/main/webapp/css/starter/starterStyle.css
+++ b/src/main/webapp/css/starter/starterStyle.css
@@ -8,6 +8,28 @@
   animation: spin 2s linear infinite;
 }
 
+/*para centrar las cajas*/
+#starterStyle #outer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+#starterStyle #outer #customContainer {
+  padding: 15px 25px;
+  width: 100%;
+  max-width: 40%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+}
+
+#starterStyle #processButton {
+  font-weight: 700;
+  padding: 10% 20%;
+  font-size: 150%;
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
