--- a/src/main/webapp/css/generalStyle.css
+++ b/src/main/webapp/css/generalStyle.css
@@ -3,7 +3,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-color: #ebebeb;
+  background-color: #f1f1f1;
   font-family: 'Noto Sans', sans-serif;
 }
 
