--- a/src/main/webapp/css/starter/starterStyle.css
+++ b/src/main/webapp/css/starter/starterStyle.css
@@ -30,6 +30,26 @@
   font-size: 150%;
 }
 
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+  background-color: #f1f1f1;
+  border: 1px solid #cdcdcd;
+  border-bottom-color: transparent;
+}
+
+.nav>li>a:focus, .nav>li>a:hover {
+  background-color: #e1e1e1;
+}
+
+.nav-tabs {
+  border-bottom: 1px solid #cdcdcd;
+}
+
+.nav-tabs>li>a {
+  color: #9aae04;
+  border: 1px solid transparent;
+
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
