--- a/src/main/webapp/templates/starter.html
+++ b/src/main/webapp/templates/starter.html
@@ -6,7 +6,7 @@
 
     <div ng-if="firstView">
 
-      <div class="text-center">
+      <div class="text-center" style="margin-top: 10%">
         <button class="w3-btn w3-tag w3-theme-action" id="processButton" ng-click="startProcess()">
           Procesar vídeo</button>
       </div>
