--- a/src/main/webapp/templates/components/description.html
+++ b/src/main/webapp/templates/components/description.html
@@ -8,41 +8,121 @@
   <div class="col-sm-6">
     <div class="w3-twothird">
       <table class="w3-table w3-striped w3-white">
-        <div ng-repeat="person in analytics1.persons">
-          <tr>
-            <td><i class="fa fa-battery-quarter w3-blue w3-padding-tiny"></i></td>
-            <td>Rango de edad:</td>
-            <td><i>{{person.age.min}} - {{person.age.max}}</i></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>Fiabilidad:</td>
-            <td><i>{{person.age.score}}</i></td>
-          </tr>
 
-          <tr>
-            <td><i class="fa fa-user-o w3-green w3-padding-tiny"></i></td>
-            <td>Expresión facial:</td>
-            <td><i>{{person.face}}</i></td>
-          </tr>
-          <tr>
-            <td><i class="fa fa-transgender w3-red w3-padding-tiny"></i></td>
-            <td>Género:</td>
-            <td><i>{{person.gender.gender}}</i></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>Fiabilidad:</td>
-            <td><i>{{person.gender.score}}</i></td>
-          </tr>
-        </div>
+        <tr>
+          <td><i class="fa fa-battery-quarter w3-blue w3-padding-tiny"></i></td>
+          <td>Rango de edad:</td>
+          <td><i>{{analytics[0].persons[0].age.min}} - {{analytics1.persons[0].age.max}}</i></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Fiabilidad:</td>
+          <td><i>{{analytics[0].persons[0].age.score}}</i></td>
+        </tr>
+
+        <tr>
+          <td><i class="fa fa-user-o w3-green w3-padding-tiny"></i></td>
+          <td>Expresión facial:</td>
+          <td><i>{{analytics[0].persons[0].face}}</i></td>
+        </tr>
+        <tr>
+          <td><i class="fa fa-transgender w3-red w3-padding-tiny"></i></td>
+          <td>Género:</td>
+          <td><i>{{analytics[0].persons[0].gender.gender}}</i></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Fiabilidad:</td>
+          <td><i>{{analytics[0].persons[0].gender.score}}</i></td>
+        </tr>
 
 
-          <tr ng-repeat="thing in analytics1.things">
-            <td>{{thing.type}}</td>
-            <td><i>{{thing.type}}</i></td>
-          </tr>
+        <tr>
+          <td><i class="fa fa-battery-quarter w3-blue w3-padding-tiny"></i></td>
+          <td>Rango de edad:</td>
+          <td><i>{{analytics[0].persons[1].age.min}} - {{analytics1.persons[1].age.max}}</i></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Fiabilidad:</td>
+          <td><i>{{analytics[0].persons[1].age.score}}</i></td>
+        </tr>
 
+        <tr>
+          <td><i class="fa fa-user-o w3-green w3-padding-tiny"></i></td>
+          <td>Expresión facial:</td>
+          <td><i>{{analytics[0].persons[01].face}}</i></td>
+        </tr>
+        <tr>
+          <td><i class="fa fa-transgender w3-red w3-padding-tiny"></i></td>
+          <td>Género:</td>
+          <td><i>{{analytics[0].persons[1].gender.gender}}</i></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Fiabilidad:</td>
+          <td><i>{{analytics[0].persons[1].gender.score}}</i></td>
+        </tr>
+
+        <tr>
+          <td><i class="fa fa-battery-quarter w3-blue w3-padding-tiny"></i></td>
+          <td>Rango de edad:</td>
+          <td><i>{{analytics[0].persons[2].age.min}} - {{analytics1.persons[2].age.max}}</i></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Fiabilidad:</td>
+          <td><i>{{analytics[0].persons[2].age.score}}</i></td>
+        </tr>
+
+        <tr>
+          <td><i class="fa fa-user-o w3-green w3-padding-tiny"></i></td>
+          <td>Expresión facial:</td>
+          <td><i>{{analytics[0].persons[2].face}}</i></td>
+        </tr>
+        <tr>
+          <td><i class="fa fa-transgender w3-red w3-padding-tiny"></i></td>
+          <td>Género:</td>
+          <td><i>{{analytics[0].persons[2].gender.gender}}</i></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Fiabilidad:</td>
+          <td><i>{{analytics[0].persons[2].gender.score}}</i></td>
+        </tr>
+
+        <tr>
+          <td><i class="fa fa-battery-quarter w3-blue w3-padding-tiny"></i></td>
+          <td>Rango de edad:</td>
+          <td><i>{{analytics[0].persons[3].age.min}} - {{analytics1.persons[3].age.max}}</i></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Fiabilidad:</td>
+          <td><i>{{analytics[0].persons[3].age.score}}</i></td>
+        </tr>
+
+        <tr>
+          <td><i class="fa fa-user-o w3-green w3-padding-tiny"></i></td>
+          <td>Expresión facial:</td>
+          <td><i>{{analytics[0].persons[3].face}}</i></td>
+        </tr>
+        <tr>
+          <td><i class="fa fa-transgender w3-red w3-padding-tiny"></i></td>
+          <td>Género:</td>
+          <td><i>{{analytics[0].persons[3].gender.gender}}</i></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Fiabilidad:</td>
+          <td><i>{{analytics[0].persons[3].gender.score}}</i></td>
+        </tr>
+
+        <tr ng-repeat="thing in analytics[0].things">
+          <td></td>
+          <td>{{thing.type}}</td>
+          <td><i>{{thing.score}}</i></td>
+        </tr>
 
       </table>
     </div>
