--- a/src/main/webapp/templates/components/description.html
+++ b/src/main/webapp/templates/components/description.html
@@ -6,7 +6,7 @@
 
   <!-- analytics section -->
   <div class="col-sm-6">
-    <div class="w3-twothird">
+    <div style="max-height: 300px;overflow-y: auto">
       <table class="w3-table w3-striped w3-white">
 
         <tr>
