--- a/src/main/webapp/templates/starter.html
+++ b/src/main/webapp/templates/starter.html
@@ -23,7 +23,6 @@
       <ul class="nav nav-tabs" style="font-size: 110%">
         <li class="active"><a data-toggle="tab" href="#description">Análisis</a></li>
         <li><a data-toggle="tab" href="#filters">Filtros</a></li>
-        <li><a data-toggle="tab" href="#learning">Aprendizaje</a></li>
         <li><a data-toggle="tab" href="#segmentation">Segmentación</a></li>
         <li><a data-toggle="tab" href="#search">Búsqueda</a></li>
       </ul>
@@ -38,17 +37,13 @@
           <h3>Diviértete mezclando filtros</h3>
           <filters></filters>
         </div>
-        <div id="learning" class="tab-pane fade">
-          <h3>Averigua el estilo del vídeo</h3>
-          <learning></learning>
-        </div>
         <div id="segmentation" class="tab-pane fade">
           <h3>Visualiza la segmentación semántica del vídeo</h3>
-          <learning></learning>
+          <img class="img-responsive" src="../images/segmentation.png" />
         </div>
         <div id="search" class="tab-pane fade">
           <h3>Búsca por metadatos</h3>
-          <learning></learning>
+          <search></search>
         </div>
       </div>
     </div>
