Modify css of the analytic section

--- a/src/main/webapp/templates/starter.html
+++ b/src/main/webapp/templates/starter.html
@@ -42,7 +42,7 @@
           <img class="img-responsive" src="../images/segmentation.png" />
         </div>
         <div id="search" class="tab-pane fade">
-          <h3>Búsca por metadatos</h3>
+          <h3>Busca por metadatos</h3>
           <search></search>
         </div>
       </div>
