--- a/src/main/webapp/templates/components/description.html
+++ b/src/main/webapp/templates/components/description.html
@@ -1,11 +1,11 @@
 <div id="descriptionStyle">
   <!-- photo section -->
   <div class="col-sm-6">
-    <img class="img-responsive" src="../../images/analytics1.png" />
+    <img class="img-responsive" src="../../images/analytics1.png" style="margin: auto;"/>
   </div><!-- END: photo section -->
 
   <!-- analytics section -->
-  <div class="col-sm-6">
+  <div class="col-sm-6" id="analyticSection">
     <div style="max-height: 300px;overflow-y: auto">
       <table class="w3-table w3-striped w3-white">
 
