--- a/src/main/webapp/templates/starter.html
+++ b/src/main/webapp/templates/starter.html
@@ -21,7 +21,7 @@
     <div ng-if="thirdView" class="text-center">
 
       <ul class="nav nav-tabs" style="font-size: 110%">
-        <li class="active" style="margin-left: 10%"><a data-toggle="tab" href="#description">Análisis</a></li>
+        <li class="active" id="activeToggleable"><a data-toggle="tab" href="#description">Análisis</a></li>
         <li><a data-toggle="tab" href="#filters">Filtros</a></li>
         <li><a data-toggle="tab" href="#segmentation">Segmentación</a></li>
         <li><a data-toggle="tab" href="#search">Búsqueda</a></li>
