--- a/src/main/webapp/css/starter/descriptionStyle.css
+++ b/src/main/webapp/css/starter/descriptionStyle.css
@@ -1,5 +1,6 @@
-@media only screen and (min-width: 768px){
+@media only screen and (max-width: 767px){
   #descriptionStyle #analyticSection{
-    padding: 5%
+    padding: 5%;
+    margin-bottom: 15%;
   }
 }
