--- a/src/main/webapp/templates/components/description.html
+++ b/src/main/webapp/templates/components/description.html
@@ -1,4 +1,5 @@
 <div id="descriptionStyle">
+  <p class="text-center">Los contenidos principales del vídeo son: {{characteristic_1}}, {{characteristic_2}} y {{characteristic_3}}. </p>
   <!-- photo section -->
   <div class="col-sm-6">
     <img class="img-responsive" src="../../images/analytics1.png" style="margin: auto;"/>
@@ -12,7 +13,7 @@
         <tr>
           <td><i class="fa fa-battery-quarter w3-blue w3-padding-tiny"></i></td>
           <td>Rango de edad:</td>
-          <td><i>{{analytics[0].persons[0].age.min}} - {{analytics1.persons[0].age.max}}</i></td>
+          <td><i>{{analytics[0].persons[0].age.min}} - {{analytics[0].persons[0].age.max}}</i></td>
         </tr>
         <tr>
           <td></td>
@@ -40,7 +41,7 @@
         <tr>
           <td><i class="fa fa-battery-quarter w3-blue w3-padding-tiny"></i></td>
           <td>Rango de edad:</td>
-          <td><i>{{analytics[0].persons[1].age.min}} - {{analytics1.persons[1].age.max}}</i></td>
+          <td><i>{{analytics[0].persons[1].age.min}} - {{analytics[0].persons[1].age.max}}</i></td>
         </tr>
         <tr>
           <td></td>
@@ -67,7 +68,7 @@
         <tr>
           <td><i class="fa fa-battery-quarter w3-blue w3-padding-tiny"></i></td>
           <td>Rango de edad:</td>
-          <td><i>{{analytics[0].persons[2].age.min}} - {{analytics1.persons[2].age.max}}</i></td>
+          <td><i>{{analytics[0].persons[2].age.min}} - {{analytics[0].persons[2].age.max}}</i></td>
         </tr>
         <tr>
           <td></td>
@@ -94,7 +95,7 @@
         <tr>
           <td><i class="fa fa-battery-quarter w3-blue w3-padding-tiny"></i></td>
           <td>Rango de edad:</td>
-          <td><i>{{analytics[0].persons[3].age.min}} - {{analytics1.persons[3].age.max}}</i></td>
+          <td><i>{{analytics[0].persons[3].age.min}} - {{analytics[0].persons[3].age.max}}</i></td>
         </tr>
         <tr>
           <td></td>
