--- a/src/main/webapp/templates/components/search.html
+++ b/src/main/webapp/templates/components/search.html
@@ -7,7 +7,7 @@
              class="form-control" placeholder='Busca un frame específico (p.ej., "Con gorro")' />
     </div>
     <div class="col-xs-2">
-      <button ng-click="submit" class="w3-btn w3-tag w3-theme-action" id="filterButton">Buscar</button>
+      <button ng-click="searchJSON()" class="w3-btn w3-tag w3-theme-action" id="filterButton">Buscar</button>
     </div>
   </div>
 
