--- a/src/main/webapp/templates/components/search.html
+++ b/src/main/webapp/templates/components/search.html
@@ -18,7 +18,7 @@
 
 
   <div ng-if="success">
-    <img class="img-responsive" ng-src="{{'../../images/' + $parent.imgName}}"/>
+    <img class="img-responsive" ng-src="{{'../../images/' + $parent.imgName + '.png'}}"/>
   </div>
 
 </div>
