Fix search function and style

--- a/src/main/webapp/templates/components/filters.html
+++ b/src/main/webapp/templates/components/filters.html
@@ -14,19 +14,23 @@
   <div ng-switch="filter">
 
     <div  ng-switch-when="color">
-      <img class="img-responsive" src="../../images/fColor.png" />
+      <img class="img-responsive" src="../../images/fColor.png"
+        style="margin:auto;margin-bottom:15%"/>
     </div>
 
     <div  ng-switch-when="border">
-      <img class="img-responsive" src="../../images/fBorder.jpeg" />
+      <img class="img-responsive" src="../../images/fBorder.jpeg"
+        style="margin:auto;margin-bottom:15%"/>
     </div>
 
     <div  ng-switch-when="face">
-      <img class="img-responsive" src="../../images/fFace.jpg" />
+      <img class="img-responsive" src="../../images/fFace.jpg"
+        style="margin:auto;margin-bottom:15%"/>
     </div>
 
     <div  ng-switch-when="art">
-      <img class="img-responsive" src="../../images/fArt.jpeg" />
+      <img class="img-responsive" src="../../images/fArt.jpeg"
+        style="margin:auto;margin-bottom:15%"/>
     </div>
 
   </div>
