--- a/src/main/webapp/templates/components/search.html
+++ b/src/main/webapp/templates/components/search.html
@@ -18,7 +18,8 @@
 
 
   <div ng-if="success">
-    <img class="img-responsive" ng-src="{{'../../images/' + $parent.imgName + '.png'}}"/>
+    <img class="img-responsive" ng-src="{{'../../images/' + $parent.imgName + '.png'}}"
+      style="margin:auto;margin-bottom:15%"/>
   </div>
 
 </div>
