--- a/src/main/webapp/templates/starter.html
+++ b/src/main/webapp/templates/starter.html
@@ -39,7 +39,8 @@
         </div>
         <div id="segmentation" class="tab-pane fade">
           <h3>Visualiza la segmentación semántica del vídeo</h3>
-          <img class="img-responsive" src="../images/segmentation.png" />
+          <img class="img-responsive" src="../images/segmentation.png"
+            style="margin:auto;margin-bottom:15%"/>
         </div>
         <div id="search" class="tab-pane fade">
           <h3>Busca por metadatos</h3>
