Fix frontend things

--- a/src/main/webapp/css/colorTheme.css
+++ b/src/main/webapp/css/colorTheme.css
@@ -24,3 +24,5 @@
 
 .w3-link {color:#2196F3 !important}
 .w3-link:hover {color:#3f51b5 !important;cursor:pointer}
+
+.w3-theme-l3:hover {color:#000 !important; background-color:#eafb6a !important}
