Nebur completely destroys MachinLenin with final commit

--- a/src/main/webapp/templates/starter.html
+++ b/src/main/webapp/templates/starter.html
@@ -1,6 +1,9 @@
 <div id="starterStyle">
   <div class="container-fluid">
 
+    <img class="img-responsive" src="../images/logo.png"
+      style="margin:auto;max-height:100px"/>
+
     <div class="initGap"></div>
 
 
